--- a/QT/resources.qrc
+++ b/QT/resources.qrc
@@ -1,29 +1,51 @@
 <RCC>
   <qresource prefix="images" >
     <file>../Icons/LightAngleUR.png</file>
+    <file>../Icons/LightAngleUR@2x.png</file>
     <file>../Icons/LightAngleLL.png</file>
+    <file>../Icons/LightAngleLL@2x.png</file>
     <file>../Icons/LightAngleLM.png</file>
+    <file>../Icons/LightAngleLM@2x.png</file>
     <file>../Icons/LightAngleLR.png</file>
+    <file>../Icons/LightAngleLR@2x.png</file>
     <file>../Icons/LightAngleML.png</file>
+    <file>../Icons/LightAngleML@2x.png</file>
     <file>../Icons/LightAngleMM.png</file>
+    <file>../Icons/LightAngleMM@2x.png</file>
     <file>../Icons/LightAngleMR.png</file>
+    <file>../Icons/LightAngleMR@2x.png</file>
     <file>../Icons/LightAngleUL.png</file>
+    <file>../Icons/LightAngleUL@2x.png</file>
     <file>../Icons/LightAngleUM.png</file>
+    <file>../Icons/LightAngleUM@2x.png</file>
     <file>images/toolbar_wireframe.png</file>
+    <file>images/toolbar_wireframe@2x.png</file>
     <file>images/error_colinear.png</file>
+    <file>images/error_colinear@2x.png</file>
     <file>images/error_color.png</file>
+    <file>images/error_color@2x.png</file>
     <file>images/error_concave_quad.png</file>
+    <file>images/error_concave_quad@2x.png</file>
     <file>images/error_determinant.png</file>
+    <file>images/error_determinant@2x.png</file>
     <file>images/error_fnf.png</file>
+    <file>images/error_fnf@2x.png</file>
     <file>images/error_info.png</file>
     <file>images/error_loop.png</file>
+    <file>images/error_loop@2x.png</file>
     <file>images/error_matching_points.png</file>
+    <file>images/error_matching_points@2x.png</file>
     <file>images/error_matrix.png</file>
+    <file>images/error_matrix@2x.png</file>
     <file>images/error_non_flat_quad.png</file>
+    <file>images/error_non_flat_quad@2x.png</file>
     <file>images/error_opengl.png</file>
     <file>images/error_parse.png</file>
+    <file>images/error_parse@2x.png</file>
     <file>images/error_vertex_order.png</file>
+    <file>images/error_vertex_order@2x.png</file>
     <file>images/fileopen.png</file>
+    <file>images/fileopen@2x.png</file>
     <file>images/filesave.png</file>
     <file>images/LDView.icns</file>
     <file>images/LDViewIcon16.png</file>
@@ -31,18 +53,24 @@
     <file>images/print.png</file>
     <file>images/StudLogo.png</file>
     <file>images/toolbar_axes.png</file>
+    <file>images/toolbar_axes@2x.png</file>
     <file>images/toolbar_bfc.png</file>
+    <file>images/toolbar_bfc@2x.png</file>
     <file>images/toolbar_edge.png</file>
+    <file>images/toolbar_edge@2x.png</file>
     <file>images/toolbar_first.png</file>
     <file>images/toolbar_last.png</file>
     <file>images/toolbar_light.png</file>
+    <file>images/toolbar_light@2x.png</file>
     <file>images/toolbar_next.png</file>
     <file>images/toolbar_popup_arrow.ppm</file>
     <file>images/toolbar_preferences.png</file>
     <file>images/toolbar_prev.png</file>
     <file>images/toolbar_privsubs.png</file>
     <file>images/toolbar_reload.png</file>
+    <file>images/toolbar_reload@2x.png</file>
     <file>images/toolbar_seams.png</file>
+    <file>images/toolbar_seams@2x.png</file>
     <file>images/toolbar_snapshot.png</file>
     <file>images/toolbar_step_first.png</file>
     <file>images/toolbar_step_last.png</file>
