--- a/QT/resources.qrc
+++ b/QT/resources.qrc
@@ -18,68 +18,68 @@
     <file>../Icons/LightAngleUL@2x.png</file>
     <file>../Icons/LightAngleUM.png</file>
     <file>../Icons/LightAngleUM@2x.png</file>
-    <file>images/toolbar_wireframe.png</file>
-    <file>images/toolbar_wireframe@2x.png</file>
-    <file>images/error_colinear.png</file>
-    <file>images/error_colinear@2x.png</file>
-    <file>images/error_color.png</file>
-    <file>images/error_color@2x.png</file>
-    <file>images/error_concave_quad.png</file>
-    <file>images/error_concave_quad@2x.png</file>
-    <file>images/error_determinant.png</file>
-    <file>images/error_determinant@2x.png</file>
-    <file>images/error_fnf.png</file>
-    <file>images/error_fnf@2x.png</file>
-    <file>images/error_info.png</file>
-    <file>images/error_loop.png</file>
-    <file>images/error_loop@2x.png</file>
-    <file>images/error_matching_points.png</file>
-    <file>images/error_matching_points@2x.png</file>
-    <file>images/error_matrix.png</file>
-    <file>images/error_matrix@2x.png</file>
-    <file>images/error_non_flat_quad.png</file>
-    <file>images/error_non_flat_quad@2x.png</file>
-    <file>images/error_opengl.png</file>
-    <file>images/error_parse.png</file>
-    <file>images/error_parse@2x.png</file>
-    <file>images/error_vertex_order.png</file>
-    <file>images/error_vertex_order@2x.png</file>
-    <file>images/fileopen.png</file>
-    <file>images/fileopen@2x.png</file>
-    <file>images/filesave.png</file>
+    <file>../Icons/toolbar_wireframe.png</file>
+    <file>../Icons/toolbar_wireframe@2x.png</file>
+    <file>../Icons/error_colinear.png</file>
+    <file>../Icons/error_colinear@2x.png</file>
+    <file>../Icons/error_color.png</file>
+    <file>../Icons/error_color@2x.png</file>
+    <file>../Icons/error_concave_quad.png</file>
+    <file>../Icons/error_concave_quad@2x.png</file>
+    <file>../Icons/error_determinant.png</file>
+    <file>../Icons/error_determinant@2x.png</file>
+    <file>../Icons/error_fnf.png</file>
+    <file>../Icons/error_fnf@2x.png</file>
+    <file>../Icons/error_info.png</file>
+    <file>../Icons/error_loop.png</file>
+    <file>../Icons/error_loop@2x.png</file>
+    <file>../Icons/error_matching_points.png</file>
+    <file>../Icons/error_matching_points@2x.png</file>
+    <file>../Icons/error_matrix.png</file>
+    <file>../Icons/error_matrix@2x.png</file>
+    <file>../Icons/error_non_flat_quad.png</file>
+    <file>../Icons/error_non_flat_quad@2x.png</file>
+    <file>../Icons/error_opengl.png</file>
+    <file>../Icons/error_parse.png</file>
+    <file>../Icons/error_parse@2x.png</file>
+    <file>../Icons/error_vertex_order.png</file>
+    <file>../Icons/error_vertex_order@2x.png</file>
+    <file>../Icons/toolbar_open.png</file>
+    <file>../Icons/toolbar_open@2x.png</file>
     <file>images/LDView.icns</file>
     <file>images/LDViewIcon16.png</file>
     <file>images/LDViewIcon.png</file>
-    <file>images/print.png</file>
-    <file>images/print@2x.png</file>
+    <file>../Icons/toolbar_print.png</file>
+    <file>../Icons/toolbar_print@2x.png</file>
     <file>images/StudLogo.png</file>
-    <file>images/toolbar_axes.png</file>
-    <file>images/toolbar_axes@2x.png</file>
-    <file>images/toolbar_bfc.png</file>
-    <file>images/toolbar_bfc@2x.png</file>
-    <file>images/toolbar_edge.png</file>
-    <file>images/toolbar_edge@2x.png</file>
-    <file>images/toolbar_first.png</file>
-    <file>images/toolbar_last.png</file>
-    <file>images/toolbar_light.png</file>
-    <file>images/toolbar_light@2x.png</file>
-    <file>images/toolbar_next.png</file>
-    <file>images/toolbar_next@2x.png</file>
+    <file>../Icons/toolbar_axes.png</file>
+    <file>../Icons/toolbar_axes@2x.png</file>
+    <file>../Icons/toolbar_bfc.png</file>
+    <file>../Icons/toolbar_bfc@2x.png</file>
+    <file>../Icons/toolbar_edge.png</file>
+    <file>../Icons/toolbar_edge@2x.png</file>
+    <file>../Icons/toolbar_light.png</file>
+    <file>../Icons/toolbar_light@2x.png</file>
+    <file>../Icons/toolbar_step_next.png</file>
+    <file>../Icons/toolbar_step_next@2x.png</file>
     <file>images/toolbar_popup_arrow.ppm</file>
-    <file>images/toolbar_preferences.png</file>
-    <file>images/toolbar_prev.png</file>
-    <file>images/toolbar_prev@2x.png</file>
-    <file>images/toolbar_privsubs.png</file>
-    <file>images/toolbar_privsubs@2x.png</file>
-    <file>images/toolbar_reload.png</file>
-    <file>images/toolbar_reload@2x.png</file>
-    <file>images/toolbar_seams.png</file>
-    <file>images/toolbar_seams@2x.png</file>
-    <file>images/toolbar_snapshot.png</file>
-    <file>images/toolbar_step_first.png</file>
-    <file>images/toolbar_step_first@2x.png</file>
-    <file>images/toolbar_step_last.png</file>
-    <file>images/toolbar_step_last@2x.png</file>
-    <file>images/toolbar_view.png</file>
+    <file>../Icons/toolbar_preferences.png</file>
+    <file>../Icons/toolbar_preferences@2x.png</file>
+    <file>../Icons/toolbar_step_prev.png</file>
+    <file>../Icons/toolbar_step_prev@2x.png</file>
+    <file>../Icons/toolbar_primsubs.png</file>
+    <file>../Icons/toolbar_primsubs@2x.png</file>
+    <file>../Icons/toolbar_reload.png</file>
+    <file>../Icons/toolbar_reload@2x.png</file>
+    <file>../Icons/toolbar_seams.png</file>
+    <file>../Icons/toolbar_seams@2x.png</file>
+    <file>../Icons/toolbar_snapshot.png</file>
+    <file>../Icons/toolbar_snapshot@2x.png</file>
+    <file>../Icons/toolbar_step_first.png</file>
+    <file>../Icons/toolbar_step_first@2x.png</file>
+    <file>../Icons/toolbar_step_last.png</file>
+    <file>../Icons/toolbar_step_last@2x.png</file>
+    <file>../Icons/toolbar_view.png</file>
+    <file>../Icons/toolbar_view@2x.png</file>
   </qresource>
 </RCC>
