Qt: add high DPI image

--- a/QT/resources.qrc
+++ b/QT/resources.qrc
@@ -31,6 +31,7 @@
     <file>../Icons/error_fnf.png</file>
     <file>../Icons/error_fnf@2x.png</file>
     <file>../Icons/error_info.png</file>
+    <file>../Icons/error_info@2x.png</file>
     <file>../Icons/error_loop.png</file>
     <file>../Icons/error_loop@2x.png</file>
     <file>../Icons/error_matching_points.png</file>
