--- a/QT/AboutPanel.ui
+++ b/QT/AboutPanel.ui
@@ -82,8 +82,8 @@
                     </sizepolicy>
                   </property>
                   <property name="text">
-                    <string>LDView Version 4.4 (__DATE__)
-Copyright © 2021 Travis Cobbs &amp; Peter Bartfai</string>
+                    <string>LDView Version 4.4 Beta 1(__DATE__)
+Copyright © 2022 Travis Cobbs &amp; Peter Bartfai</string>
                   </property>
                   <property name="textFormat">
                     <enum>Qt::PlainText</enum>
