--- a/QT/AboutPanel.ui
+++ b/QT/AboutPanel.ui
@@ -150,7 +150,7 @@ Carsten Schmitz
 Willy Tschager
 Martijn Zwaal
 
-Jean-Ioup Gailly, Mark Adler, and the rest of the zlib team
+Jean-loup Gailly, Mark Adler, and the rest of the zlib team
 Glen  Randers-Pehrson and the rest of the libpng team</string>
               </property>
               <property name="textFormat">
